# CobaltCas

./: .gitignore  README.md  meson.build
debian/: .gitignore  changelog  control  libcobaltcas.install  postrm  rules
src/: CobaltCas.sln  CobaltCas.vcxproj  CobaltCas.vcxproj.filters  card.cpp  card.h  crypto.cpp  crypto.h  default_card_image.h  exports.def  key_manager.cpp  key_manager.h  ldst.h  log.cpp  log.h  project.h  utils.cpp  utils.h  version.rc  winscard.cpp
